# io_write_rs

./: Cargo.toml  README.md  hello.txt
src/: main.rs
src/aread/: main.rs
src/awrite/: main.rs
